--- a/faq.html
+++ b/faq.html
@@ -44,25 +44,24 @@
     </header>
     <main>
         <a href="./">トップページに戻る</a>
-        <h1>サイトに関して</h1>
         <section>
-            <h2>このサイトは誰が運営しているの？</h2>
-            <p>水戸一高附属中学校2学年の有志で運営しています。</p>
-            <p>管理者はtalusです。</p>
-        </section>
-        <section>
-            <h2>このサイトって外部からアクセスできるの？</h2>
-            <p>いいえ、Googleなどの検索結果に表示されることはありません。ただし、URLを知っている人は直接アクセスできるため、
-                URLを関係者以外に教えたり、SNSなどで共有したりしないでください。</p>
+            <h2>サイトに関して</h2>
+            <h3>このサイトは誰が運営しているの？</h2>
+                <p>水戸一高附属中学校2学年の有志で運営しています。</p>
+                <p>管理者はtalusです。</p>
+                <hr>
+                <h3>このサイトって外部からアクセスできるの？</h3>
+                <p>いいえ、Googleなどの検索結果に表示されることはありません。ただし、URLを知っている人は直接アクセスできるため、
+                    URLを関係者以外に教えたり、SNSなどで共有したりしないでください。</p>
+                <p>もし流出してしまった場合でも、学校のGoogleアカウントのみでアクセス可能です。</p>
         </section>
 
-        <h1>ユーザー登録に関して</h1>
         <section>
-            <h2>Google以外でのログインはできる？</h2>
+            <h2>ユーザー登録に関して</h2>
+            <h3>Google以外でのログインはできる？</h3>
             <p>現在のところ、Googleアカウントを使用したログインのみをサポートしています。</p>
-        </section>
-        <section>
-            <h2>ログインできない</h2>
+            <hr>
+            <h3>ログインできない</h3>
             <p>以下の点を確認してください。</p>
             <ul>
                 <li>インターネット接続が安定しているか確認してください。</li>
@@ -71,72 +70,56 @@
                 <li>Googleアカウントが正常に機能しているか確認してください。</li>
             </ul>
             <p>それでも問題が解決しない場合は、管理者までご連絡ください。</p>
-        </section>
-        <section>
-            <h2>表示名に他の人の名前を使ってもいいですか？</h2>
+            <hr>
+            <h3>表示名に他の人の名前を使ってもいいですか？</h3>
             <p>ダメです。自分のハンドルネーム、もしくは実名を使ってください。</p>
             <p>他の人の名前を使ってトラブルが起きた場合は、自己責任となりますのでご注意ください。</p>
             <p style="color: #FE483B;">特に、管理人である"talus"の名前を使ってのなりすましは絶対にやめてください。</p>
         </section>
 
-        <h1>時間割に関して</h1>
         <section>
-            <h2>時間割が更新されない</h2>
+            <h2>時間割に関して</h2>
+            <h3>時間割が更新されない</h3>
             <p>学校側の問題です。運営側としてはどうしようもありません。</p>
         </section>
-        <section id="timetable-error">
-            <h2>時間割がエラーで表示されない</h2>
-            <p>
-                時間割が見られないときは、以下の手順を踏んだ上、再読込してください。<br>
-                1. <a href='https://mito1-website.loca.lt/' target='_blank' rel='noopener noreferrer'>このリンク</a>に飛ぶ<br>
-                2. パスワード欄に`106.73.192.65`を入力する<br>
-                3. submitを押す<br>
-                4.
-                ファイル一覧が表示されたら成功→名簿と時間割が表示されるようになります。
-            </p>
-        </section>
 
-        <h1>掲示板や質問箱に関して</h1>
         <section>
-            <h2>掲示板や質問箱でスパム、誹謗中傷、不適切な内容が投稿されました</h2>
+            <h2>掲示板や質問箱に関して</h2>
+            <h3>掲示板や質問箱でスパム、誹謗中傷、不適切な内容が投稿されました</h3>
             <p>投稿は定期的に監視していますが、もし見つけた場合は速やかに削除しますので、管理者までご連絡ください。</p>
-        </section>
-        <section>
-            <h2>掲示板や質問箱で投稿した内容を編集・削除したい</h2>
+            <hr>
+            <h3>掲示板や質問箱で投稿した内容を編集・削除したい</h3>
             <p>投稿の編集・削除は管理者までご連絡ください。</p>
-        </section>
-        <section>
-            <h2>掲示板や質問箱で投稿した内容が反映されない</h2>
+            <hr>
+            <h3>掲示板や質問箱で投稿した内容が反映されない</h3>
             <p>投稿が反映されるまでに数分かかることがあります。しばらく待ってからページを再読み込みしてください。</p>
         </section>
 
-        <h1>メニューに関して</h1>
         <section>
-            <h2>メニューが開けません</h2>
+            <h2>メニューに関して</h2>
+            <h3>メニューが開けません</h3>
             <p>ブラウザの設定や拡張機能が原因でメニューが正常に表示されないことがあります。以下の点を確認してください。</p>
             <ul>
                 <li>JavaScriptが有効になっているか確認してください。</li>
                 <li>広告ブロッカーやスクリプトブロッカーを無効にしてみてください。</li>
                 <li>別のブラウザやデバイスで試してみてください。</li>
             </ul>
-        </section>
-        <section>
-            <h2>ホーム画面から動けない</h2>
+            <hr>
+            <h3>ホーム画面から動けない</h3>
             <p>右上のメニューアイコンをクリックすると、メニューが開きます。</p>
         </section>
 
-        <h1>その他</h1>
         <section>
-            <h2>更新内容などを詳しく知りたい</h2>
+            <h2>その他</h2>
+            <h3>更新内容などを詳しく知りたい</h3>
             <p><a href="https://github.com/talus-daise/mito1-website/blob/main/README.md" target="_blank"
-                    rel="noopener noreferrer">README.md</a>を参照してください</p>
-        </section>
-        <section>
-            <h2>ソースコードを見たい</h2>
+                    rel="noopener noreferrer">README.md</a>や<a href="https://github.com/talus-daise/mito1-website/blob/main/docs/CHANGELOG.md" target="_blank"
+                    rel="noopener noreferrer">CHANGELOG.md</a>を参照してください</p>
+            <hr>
+            <h3>ソースコードを見たい</h3>
             <p>このサイトのソースコードは<a href="https://github.com/talus-daise/mito1-website" target="_blank"
                     rel="noopener noreferrer">GitHub</a>で公開されています。</p>
         </section>
-        <a href="./">トップページに戻る</a>
     </main>
 
     <script type="module" src="./script/notice/notice.js" defer></script>
