--- a/member_list/index.html
+++ b/member_list/index.html
@@ -132,7 +132,7 @@
             <p>武本夏子</p>
             <hr>
             <h3>音楽</h3>
-            <p>小沼みのり</p>
+            <p>小沼このみ</p>
             <hr>
             <p>(以上敬称略)</p>
         </section>
