--- a/mypage/index.html
+++ b/mypage/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="../script/notice/notice.css">
+    <style>
+        #user-avatar {
+            border: 1px solid #ccc;
+            border-radius: 50%;
+            margin: 0 0 0 1.5rem;
+        }
+    </style>
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
     <meta name="description" content="水戸一附属中生向けの総合ウェブサイトです。附属中向けの掲示板や質問箱を運営しています。">
@@ -55,12 +62,12 @@
                         style="margin: 0 0 0 1rem;">編集</button></p>
                 <p><i class="fa-solid fa-envelope"></i>メールアドレス: <span id="user-email">guest@example.com</span></p>
                 <p><i class="fa-solid fa-shield-alt"></i>権限: <span id="user-role">ゲスト</span></p>
-                <p><i class="fa-solid fa-info-circle"></i>自己紹介: <span id="about-me">自己紹介は未設定です。</span></p><button id="edit-about-me"
-                    style="margin: 0 0 0 1rem;">編集</button>
+                <p><i class="fa-solid fa-info-circle"></i>自己紹介: <span id="about-me">自己紹介は未設定です。</span><button id="edit-about-me"
+                    style="margin: 0 0 0 1rem;">編集</button></p>
             </div>
-            <button id="logout-button">ログアウト</button>
+            <p><button id="logout-button">ログアウト</button></p>
             <hr>
-            <p>名前変更の際は、<a href="../faq.html">よくある質問</a>をよく読んだ上で変更してください。</p>
+            <p>名前変更の際は、<a href="../faq.html#:~:text=%E8%A1%A8%E7%A4%BA%E5%90%8D%E3%81%AB%E4%BB%96%E3%81%AE%E4%BA%BA%E3%81%AE%E5%90%8D%E5%89%8D%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%82%82%E3%81%84%E3%81%84%E3%81%A7%E3%81%99%E3%81%8B%EF%BC%9F">よくある質問</a>をよく読んだ上で変更してください。</p>
             <p><a id="my-page-link" href="#">公開中のマイページへ</a></p>
         </section>
         <section>
